--- a/code/1_taxonomic_assignment_blastn.Rmd
+++ b/code/1_taxonomic_assignment_blastn.Rmd
@@ -18,7 +18,7 @@ rename <- dplyr::rename
 
 ## load output from taxonkit 
 ```{r load-output-from-taxonkit}
-taxonomy <-read.delim("/home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/blastn_taxlineage.txt", header = FALSE, na.strings=c(""," ","NA"))
+taxonomy <-read.delim("/home/kimberly.ledger/nearshore_eDNA/data/blastn_taxlineage.txt", header = FALSE, na.strings=c(""," ","NA"))
 
 head(taxonomy)
 ```
@@ -32,7 +32,6 @@ tax_df <- taxonomy %>%
   group_by(V1, V17) %>% # group by the sequence key and the full taxonomy to reduce duplicate entries
   unique() %>% # doing that reduced the number of entries
   rename(qseqid=V1, perc_id=V3, length=V4, taxonomy=V17) %>% #rename headers
-  #filter(perc_id > 98) %>% # blast output includes as low as 96 perc_id, but for now i only care about the top 2%
   filter(!is.na(taxonomy))
 ```
 
@@ -173,7 +172,7 @@ single_spp_seqs_98 <- single_spp_seqs %>%
 ## remove the single-species seqs from the dataframe and then rank the hits by % identity for the remaining seqs
 ```{r}
 seq_id_diff <- taxon_df_reduced %>%
-  anti_join(., single_spp_seqs) %>%  ## comment out this line if there are no single species ASVs
+  anti_join(., single_spp_seqs_98) %>%  ## comment out this line if there are no single species ASVs
   select(-length) %>%
   group_by(qseqid, species, genus, family, order, class, phylum, kingdom) %>%
     mutate(seq_percID = max(perc_id)) %>%
@@ -190,8 +189,6 @@ seq_id_diff <- taxon_df_reduced %>%
 ```
 
 Now you have the single best entry for each species for each sequence ranked and with the difference between the first and second ranked entries calculated.
-
-For sequences with multiple top hits, where the difference between ranked taxa = 0, you will end up defaulting to genus- or family-level ID. We'll do the same for any sequences where the difference between the first and second ranked taxa is < 1%.
 
 ** if there is a sequence that is >99% match, then keep just the sequences within 0.5%  
 ** if there is NOT a >99% match, keep the top 1% 
@@ -360,11 +357,13 @@ single_spp <- singleton_df %>%
 tax_df_2 <- bind_rows(single_kingdom, single_phylum, single_class, single_order, single_family, single_genus, single_spp)
 ```
 
+
+
 ## also ran blastn against the salmon specific reference database 
 blastn -query /home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/filtered.seqs.fasta -db /genetics/edna/custom_dbs/salmon_mifish_db_20241227 -out home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/blastn_salmon.txt -perc_identity 96 -qcov_hsp_perc 98 -num_threads 10 -outfmt '6 qseqid sseqid pident length mismatch gapopen qstart qend sstart send evalue bitscore sscinames staxids'
 
 ```{r}
-salmon_tax <- read.delim("/home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/blastn_salmon.txt", header = FALSE, na.strings=c(""," ","NA"))
+salmon_tax <- read.delim("/home/kimberly.ledger/nearshore_eDNA/data/blastn_salmon.txt", header = FALSE, na.strings=c(""," ","NA"))
 
 salmon_tax <- salmon_tax %>%
   filter(V4 > 100) %>% # make sure all retained matches are >100 bp
@@ -393,8 +392,7 @@ seq_id_diff_salmon <- salmon_tax %>%
 seq_id_diff_salmon
 ```
 
-** if there is a sequence that is >99% match, then keep just the sequences within 0.5%  
-** if there is NOT a >99% match, keep the top 1% 
+** keep just the sequences within 0.5% of the top hit, and also must be at least 98% match   
 
 ## Figure out which differences are outside the threshold and eliminate those first
 ```{r}
@@ -463,16 +461,21 @@ tax_df_3 <- tax_df_2 %>%
   bind_rows(salmon_df)
 ```
 
+
+```{r}
+tax_diff <- anti_join(tax_df_2, tax_df_3) 
+```
+
 ## custom updates to make: 
-ASV_0053 - filter by diff = 0 to assign to Ophiodon elongatus
-assign Pleuronectidae into groups 
+- ASV_0053 - filter by diff = 0 to assign to Ophiodon elongatus
+- assign Pleuronectidae and Sebastes into groups 
 Pleuronectidae 1: Hippoglossoides elassodon, Hippoglossoides robustus, Limanda aspera
 Pleuronectidae 2: Isopsetta isolepis, Parophrys vetulus, Psettichthys melanostictus
 Pleuronectidae 3: Liopsetta glacialis, Platichthys stellatus
 Sebastes 1: Sebastes caurinus/Sebastes maliger
 Sebastes 2: Sebastes auriculatus/Sebastes rastrelliger
 Sebastes 3: lots of Sebastes sp including Sebastes flavidus
--put all Gadus reads to genus level. 
+- put all Gadus reads to genus level. 
 - put all Ammodytes reads to Ammodytes personatus (it's the only species present in region)
 - lump the few Anoplarchus purpurescens reads to genus level 
 - lump the few Cottus cognatus reads to genus level
@@ -523,8 +526,8 @@ tax_df_updated_collapsed <- tax_df_updated %>%
 ```
 
 ```{r}
-write.csv(tax_df_updated, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20250110_uncollapsed.csv")
-write.csv(tax_df_updated_collapsed, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20250110_collapsed.csv")
+write.csv(tax_df_updated, "/home/kimberly.ledger/nearshore_eDNA/outputs/taxonomy_20250110_uncollapsed.csv")
+write.csv(tax_df_updated_collapsed, "/home/kimberly.ledger/nearshore_eDNA/outputs/taxonomy_20250110_collapsed.csv")
 ```
 
 
@@ -576,7 +579,7 @@ tax_df_groups <- tax_df_updated %>%
 
 export 
 ```{r}
-write.csv(tax_df_groups, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_groups_20250110.csv")
+write.csv(tax_df_groups, "/home/kimberly.ledger/nearshore_eDNA/outputs/taxonomy_groups_20250110.csv")
 ```
 
 Oncorhynchus = mykiss, nerka, keta, gorbuscha, kisutch
